--- a/Webshop.UI/Pages/User/Index.cshtml
+++ b/Webshop.UI/Pages/User/Index.cshtml
@@ -1,13 +1,8 @@
 ﻿@page
 @model Webshop.UI.Pages.User.IndexModel
 @{
-}
 
-<h1>The current users are:
+ }
+
+<h1>Hi, @Model.currentCustomer.Name!
 </h1>
-<ul>
-@foreach (var customer in Model.customers)
-	{
-		 <li>@customer.Name</li>
-	}
-	</ul>
