--- a/Webshop.UI/Pages/Cart/Index.cshtml
+++ b/Webshop.UI/Pages/Cart/Index.cshtml
@@ -8,17 +8,32 @@
         <tr>
             <th scope="col">#</th>
             <th scope="col">Namn</th>
-            <th scope="col">Mängd</th>
+            <th scope="col">Antal</th>
+            <th scope="col">á Pris</th>
+            <th scope="col">Total</th>
         </tr>
     </thead>
     <tbody>
-        @for (int i = 0; i < Model.Products.Count; i++)
+        @{double total = 0;}
+    @for (int i = 0; i < Model.Products.Count; i++)
         {
+            total += (Model.Products.ToArray()[i].Key.Price * Model.Products.ToArray()[i].Value);
             <tr>
-                <th scope="row">@i</th>
+                <th scope="row">@(i+1)</th>
                 <td>@Model.Products.ToArray()[i].Key.Name</td>
                 <td>@Model.Products.ToArray()[i].Value</td>
+                <td>@Model.Products.ToArray()[i].Key.Price</td>
+                <td>@String.Format("{0:n}", (Model.Products.ToArray()[i].Key.Price * Model.Products.ToArray()[i].Value)) kr</td>
             </tr>
         }
+        <tfoot>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Total Kostnad: </td>
+                <td>@total kr</td>
+            </tr>
+        </tfoot>
     </tbody>
 </table>
