--- a/Webshop.UI/Pages/Shared/_Layout.cshtml
+++ b/Webshop.UI/Pages/Shared/_Layout.cshtml
@@ -11,38 +11,28 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">@ViewData["Title"]</a>
-                <form asp-page="/User/Index" asp-page-handler="Set" class="form-inline mr-3" method="POST">
-                        <select style="padding:10px;" name="id" id="id" onchange="this.form.submit()">
-E                            <option>Välj Kund</option>
-                            <option value="0">John</option>
-                            <option value="1">Eric</option>
-                            <option value="2">Lindsay</option>
-                            <option value="3">Rebecca</option>
-                            <option value="4">Kristian</option>
-                        </select>
-                </form>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Webshop</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">Användare</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Cart/Index">Kundvagn</a>
-                        </li>
-                    </ul>
+                    @await RenderSectionAsync("UserMenu", required: false)
                     <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Sök Produkt" aria-label="Search">
                         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Sök</button>
                     </form>
                 </div>
+                <form asp-page="/User/Index" asp-page-handler="Set" class="form-inline ml-3" method="POST">
+                    <select style="padding:10px;" name="id" id="id" onchange="this.form.submit()">
+                        <option>Välj Kund</option>
+                        <option value="0">John</option>
+                        <option value="1">Eric</option>
+                        <option value="2">Lindsay</option>
+                        <option value="3">Rebecca</option>
+                        <option value="4">Kristian</option>
+                    </select>
+                </form>
             </div>
         </nav>
     </header>
@@ -51,13 +41,11 @@ E                            <option>Välj Kund</option>
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - Webshop.UI - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
-
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
