--- a/Webshop.UI/Pages/User/Cart.cshtml
+++ b/Webshop.UI/Pages/User/Cart.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{handler?}/{id?}"
 @model Webshop.UI.Pages.User.CartModel
 @{
-    Layout = "_User";
+Layout="_Content";
 }
 <div class="container m-3 p-3">
     @if (Model.Products.Count > 0)
@@ -46,6 +46,10 @@
             </tfoot>
             </tbody>
         </table>
+
+        <a asp-page="/User/Order" asp-page-handler="Put" asp-route-cart="@Model.UserCart.Id" class="btn btn-outline-secondary btn-lg" role="button">Lägg Order</a>
+
+
     }
     else
     {
