--- a/Webshop.UI/Pages/Shared/_Layout.cshtml
+++ b/Webshop.UI/Pages/Shared/_Layout.cshtml
@@ -9,20 +9,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Webshop</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    @await RenderSectionAsync("UserMenu", required: false)
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Sök Produkt" aria-label="Search">
-                        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Sök</button>
-                    </form>
-                </div>
                 <form asp-page="/User/Index" asp-page-handler="Set" class="form-inline ml-3" method="POST">
                     <select style="padding:10px;" name="id" id="id" onchange="this.form.submit()">
                         <option>Välj Kund</option>
@@ -36,7 +25,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid p-0 m-0">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
