--- a/Webshop.UI/Pages/User/Index.cshtml
+++ b/Webshop.UI/Pages/User/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Webshop.UI.Pages.User.IndexModel
-@{
-    Layout = "_User";
- }
-
+@{ 
+    Layout = "_Content";
+}}
 <h1>Hi, @Model.SessionInfo_Customer.Name!</h1>
+
