--- a/Webshop.UI/Pages/User/Cart.cshtml
+++ b/Webshop.UI/Pages/User/Cart.cshtml
@@ -47,7 +47,7 @@ Layout="_Content";
             </tbody>
         </table>
 
-        <a asp-page="/User/Order" asp-page-handler="Put" asp-route-cart="@Model.UserCart.Id" class="btn btn-outline-secondary btn-lg" role="button">Lägg Order</a>
+        <a asp-page="/User/Order/Make" asp-page-handler="Put" asp-route-cart="@Model.UserCart.Id" class="btn btn-outline-secondary btn-lg" role="button">Lägg Order</a>
 
 
     }
