--- a/Webshop.UI/Pages/User/Index.cshtml
+++ b/Webshop.UI/Pages/User/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model Webshop.UI.Pages.User.IndexModel
-@{ 
+@{
     Layout = "_Content";
-}}
+}
 <h1>Hi, @Model.SessionInfo_Customer.Name!</h1>
 
+    <h2>Receipts:</h2>
