--- a/Webshop.UI/Pages/Index.cshtml
+++ b/Webshop.UI/Pages/Index.cshtml
@@ -7,14 +7,15 @@
     @foreach (var product in Model.products)
     {
         <div class="card m-1" style="min-width:16rem; max-width:16rem">
-            <img src="@product.Image" class="card-img-top p-4" alt="...">
+            <img src="@product.Image" class="card-img-top p-3" alt="...">
             <div class="card-body">
                 <h5 class="card-title">@product.Name</h5>
-                <p class="card-text">@product.Desc</p>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">@product.Price.ToString("N") kr</li>
-            </ul>
+            <div class="list-group list-group-flush">
+                <a href="#prod@(product.Id)" class="list-group-item list-group-item-action" data-toggle="collapse">Description:</a>
+                <div class="list-group-item collapse" id="prod@(product.Id)">@product.Desc</div>
+                <div class="list-group-item">@product.Price.ToString("N") kr</div>
+            </div>
             @if (default != Model.SessionInfo_Customer)
             {
                 <div class="card-footer">
