--- a/Webshop.UI/Pages/Shared/_UserMenu.cshtml
+++ b/Webshop.UI/Pages/Shared/_UserMenu.cshtml
@@ -1,5 +1,4 @@
-﻿
-<header>
+﻿<header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
         <div class="container-fluid">
             <ul class="navbar-nav flex-grow-1">
@@ -20,7 +19,7 @@
                         <a class="dropdown-item" asp-page="/User/Order/Index">Historik</a>
                         <a class="dropdown-item" asp-page="/User/Order/Receipt">Kvitton</a>
                     </div>
-                    </li>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-page="/User/Cart">Kundvagn</a>
                 </li>
