--- a/Webshop.UI/Pages/User/Order/Make.cshtml
+++ b/Webshop.UI/Pages/User/Order/Make.cshtml
@@ -20,7 +20,7 @@
         }
     </div>
     <div class="form-group">
-        <label for="paymentCode">Kod</label>
+        <label for="paymentCode">Kod (Namnet på inloggad användare: @Model.SessionInfo_Customer.Name)</label>
         <input type="password" class="form-control" id="PassString" placeholder="" name="PassString" required>
         @if (TempData["ErrorMessage"] != null)
         {
