--- a/Webshop.UI/Pages/User/Order/Make.cshtml
+++ b/Webshop.UI/Pages/User/Order/Make.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id?}"
 @model Webshop.UI.Pages.User.Order.MakeModel
 @{ 
-    Layout = "_Content";
+    Layout = "/Pages/User/_Layout.cshtml";
 }
 
 <form asp-page="/User/Card" asp-page-handler="Pay" method="POST">
