--- a/Webshop.UI/Pages/Shared/_UserMenu.cshtml
+++ b/Webshop.UI/Pages/Shared/_UserMenu.cshtml
@@ -1,29 +1,32 @@
 ﻿<header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
-        <div class="container-fluid">
-            <ul class="navbar-nav flex-grow-1">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="UserDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Användare
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="UserDropdown">
-                        <a class="dropdown-item" asp-page="/User/Index">Information</a>
-                        <a class="dropdown-item" asp-page="/User/Card">Kort</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="OrderDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Order
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="OrderDropdown">
-                        <a class="dropdown-item" asp-page="/User/Order/Index">Historik</a>
-                        <a class="dropdown-item" asp-page="/User/Order/Receipt">Kvitton</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-page="/User/Cart">Kundvagn</a>
-                </li>
-            </ul>
-            </div>
+        <ul class="navbar-nav flex-grow-1">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="UserDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Användare
+                </a>
+                <div class="dropdown-menu" aria-labelledby="UserDropdown">
+                    <a class="dropdown-item" asp-page="/User/Index">Information</a>
+                    <a class="dropdown-item" asp-page="/User/Card">Kort</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="OrderDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Order
+                </a>
+                <div class="dropdown-menu" aria-labelledby="OrderDropdown">
+                    <a class="dropdown-item" asp-page="/User/Order/Index">Historik</a>
+                    <a class="dropdown-item" asp-page="/User/Order/Receipt">Kvitton</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="btn btn-info" id="cartFlip" href="#cart">Kundvagn</a>
+            </li>
+        </ul>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">@ViewData["username"]</a>
+            </li>
+        </ul>
     </nav>
 </header>
