--- a/Webshop.UI/Pages/User/Order/Index.cshtml
+++ b/Webshop.UI/Pages/User/Order/Index.cshtml
@@ -1,56 +1,67 @@
 ﻿@page
 @model Webshop.UI.Pages.User.Order.IndexModel
 @{
-    Layout = "_Content";
+    Layout = "/Pages/User/_Layout.cshtml";
 }
-<h2>Orderhistorik</h2>
-@foreach (var Order in @Model.ProductsPerOrder)
-{
-    double sum = 0;
-    <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Namn</th>
-                <th scope="col">Antal</th>
-                <th scope="col">á Pris</th>
-                <th scope="col">Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var OrderRow in Order.Value)
-            {
-                <tr>
-                    <td>@OrderRow.Key.Name</td>
-                    <td>@OrderRow.Value</td>
-                    <td>@OrderRow.Key.Price</td>
-                    <td>@((OrderRow.Key.Price * OrderRow.Value).ToString("N")) kr</td>
-                    @{sum += OrderRow.Key.Price * OrderRow.Value;}
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th scope="col" />
-                <th scope="col" />
-                <th scope="col">Totalt:</th>
-                <th scope="col">@sum.ToString("N")</th>
-            </tr>
-            <tr>
-                <th scope="col" />
-                <th scope="col" />
-                <th scope="col">Betald:</th>
-                @if (Order.Key.Is_paid == true)
-                {
-                    <th>Betalad!</th>
-                }
-                else
-                {   
-            <th>
-                <a asp-page="/User/Order/Make" asp-route-id="@Order.Key.Id" class="btn text-white btn-danger">Betala!</a>
-            </th>
-                }
-            </tr>
-        </tfoot>
-    </table>
+<div class="container-fluid">
+    <form asp-page="/User/Order/Index" asp-page-handler="Sort" method="POST">
+        <select name="sortTerm" id="sortTerm" onchange="this.form.submit()">
+            <option>Sortera enligt:</option>
+            <option value="desc">Betalda</option>
+            <option value="asc">Icke Betalda</option>
+        </select>
+    </form>
+    <div class="order">
+        <h2>Orderhistorik</h2>
+        @foreach (var Order in @Model.ProductsPerOrder)
+        {
+            double sum = 0;
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Namn</th>
+                        <th scope="col">Antal</th>
+                        <th scope="col">á Pris</th>
+                        <th scope="col">Total</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var OrderRow in Order.Value)
+                    {
+                        <tr>
+                            <td>@OrderRow.Key.Name</td>
+                            <td>@OrderRow.Value</td>
+                            <td>@OrderRow.Key.Price</td>
+                            <td>@((OrderRow.Key.Price * OrderRow.Value).ToString("N")) kr</td>
+                            @{sum += OrderRow.Key.Price * OrderRow.Value;}
+                        </tr>
+                    }
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th scope="col" />
+                        <th scope="col" />
+                        <th scope="col">Totalt:</th>
+                        <th scope="col">@sum.ToString("N")</th>
+                    </tr>
+                    <tr>
+                        <th scope="col" />
+                        <th scope="col" />
+                        <th scope="col">Betald:</th>
+                        @if (Order.Key.Is_paid == true)
+                        {
+                            <th>Betalad!</th>
+                        }
+                        else
+                        {
+                            <th>
+                                <a asp-page="/User/Order/Make" asp-route-id="@Order.Key.Id" class="btn text-white btn-danger">Betala!</a>
+                            </th>
+                        }
+                    </tr>
+                </tfoot>
+            </table>
 
-    }
+        }
+    </div>
+</div>
