--- a/Webshop.UI/Pages/User/_Layout.cshtml
+++ b/Webshop.UI/Pages/User/_Layout.cshtml
@@ -1,5 +1,75 @@
-﻿@{
-    Layout = "/Pages/Shared/_Layout.cshtml";
-}
-@await Html.PartialAsync("_UserMenu")
-@RenderBody()
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/extension.css" />
+</head>
+<body style="margin:0;padding:0;">
+            <header>
+                <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" asp-area="" asp-page="/Index">Webshop</a>
+                        <div class="ml-auto nav">
+                            <form asp-page="/Index" asp-page-handler="Search" method="POST" class="form-inline my-2 my-lg-0 mr-3">
+                                <input class="form-control mr-sm-2" name="term" id="term" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                            <form asp-page="/User/Index" asp-page-handler="Set" class="form-inline" method="POST">
+                                <select name="id" id="id" class="p-1" onchange="this.form.submit()">
+                                    <option>Välj Kund</option>
+                                    <option value="0">John</option>
+                                    <option value="1">Eric</option>
+                                    <option value="2">Lindsay</option>
+                                    <option value="3">Rebecca</option>
+                                    <option value="4">Kristian</option>
+                                </select>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
+                @await Html.PartialAsync("_UserMenu")
+            </header>
+            <main role="main">
+                <div class="wrapper">
+                    <div id="cart" class="hidden"></div>
+                    <div id="content">
+                        @RenderBody()
+                        <div id="addToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                            <div class="toast-header">
+                                <strong class="me-auto">WebShop Info.</strong>
+                                <small>@DateTime.Now.ToString("HH':'mm':'ss")</small>
+                                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                            </div>
+                            <div class="toast-body">
+                                Product Tillagd.
+                            </div>
+                        </div>
+                        <div id="removeToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                            <div class="toast-header">
+                                <img src="..." class="rounded me-2" alt="...">
+                                <strong class="me-auto">WebShop Info.</strong>
+                                <small>@DateTime.Now.ToString("HH':'mm':'ss")</small>
+                                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                            </div>
+                            <div class="toast-body">
+                                Product Borttagen.
+                            </div>
+                        </div>
+                    </div>
+                    <footer class="border-top footer text-muted">
+                        <div class="container">
+                            &copy; 2021 - Webshop.UI - <a asp-area="" asp-page="/Privacy">Privacy</a>
+                        </div>
+                    </footer>
+                </div>
+            </main>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
+</body>
+</html>
