--- a/Webshop.UI/Pages/User/Index.cshtml
+++ b/Webshop.UI/Pages/User/Index.cshtml
@@ -3,6 +3,4 @@
 @{
     Layout = "_Layout";
 }
-<h1>Hi, @Model.SessionInfo_Customer.Name!</h1>
-
-    <h2>Receipts:</h2>
+<h1>Hej, @Model.SessionInfo_Customer.Name!</h1>
