--- a/Webshop.UI/wwwroot/css/extension.css
+++ b/Webshop.UI/wwwroot/css/extension.css
@@ -28,3 +28,9 @@ div#cart {
     border-right: 1px solid rgba(219,223,227,100);
     border-bottom: 1px solid rgba(219,223,227,100);
 }
+
+#removeToast, #addToast {
+    right:0;
+    top:50vh;
+    position:absolute;
+}
